Project 1/force-app/main/default/objects/Address__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>Address State</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>