Project 1/force-app/main/default/objects/Address__c/fields/Address_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Address_ZipCode__c</fullName>
    <label>Address ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>