Project 1/force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Address_Street__c +&apos;, &apos;+ Address_City__c +&apos;, &apos;+ Address_State__c +&apos; &apos;+ Address_ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>